# Pentagon-Gardening-Simulator

./: Cargo.toml  README.md
src/: main.rs
src/geom/: circles.rs  mobius.rs  mod.rs  points.rs
src/gfx/: bindings.rs  cache.rs  draw.rs  macros.rs  mod.rs  shader.wgsl  state.rs  structs.rs
src/gfx/pipelines/: blit.rs  circles.rs  mod.rs
src/puzzle/: grip.rs  mod.rs  piece.rs
